--- a/www-frontend/src/components/BarList.css
+++ b/www-frontend/src/components/BarList.css
@@ -1,3 +1,9 @@
 @import './SharedStyles.css';
 
+.bar-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  color: #000
+}
 /* Aquí agregas solo las reglas específicas de BeerList */
