--- a/www-frontend/src/components/SharedStyles.css
+++ b/www-frontend/src/components/SharedStyles.css
@@ -84,3 +84,14 @@
   min-height: 450px; /* Ajusta esto según lo necesites */
   overflow: visible; /* Permite ver todo el contenido y hacer scroll */
 }
+
+.bar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  position: relative;
+  width: 100%;
+  padding: 0 10px;
+  box-sizing: border-box;
+}
